Fix file image previews jumping around with scroll

--- a/bin/cdb.less
+++ b/bin/cdb.less
@@ -437,7 +437,7 @@
 						font-family : monospace;
 					}
 					display : none;
-					position : absolute;
+					position : fixed;
 					background-color : #333;
 					color: white;
 					border : 1px solid black;
